--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.technearts</groupId>
   <artifactId>fkeytoolhelper</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
+  <version>1.0.1-SNAPSHOT</version>
   <properties>
     <compiler-plugin.version>3.8.1</compiler-plugin.version>
     <kotlin.version>1.7.20</kotlin.version>
@@ -105,17 +105,17 @@
           <compilerPlugins>
             <plugin>all-open</plugin>
           </compilerPlugins>
-          <!--
-          <pluginOptions>
-            <option>all-open:annotation=javax.ws.rs.Path</option>
-            <option>all-open:annotation=javax.enterprise.context.ApplicationScoped</option>
-            <option>all-open:annotation=io.quarkus.test.junit.QuarkusTest</option>
-          </pluginOptions>
-          -->
         </configuration>
       </plugin>
     </plugins>
   </build>
+  <distributionManagement>
+    <repository>
+      <id>github</id>
+      <name>GitHub Packages</name>
+      <url>https://maven.pkg.github.com/suderio/fkeytoolhelper</url>
+    </repository>
+  </distributionManagement>
   <profiles>
     <profile>
       <id>native</id>
