--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,7 @@
         </configuration>
       </plugin>
       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
         <version>3.3.0</version>
         <executions>
